Ending the first paragraph

--- a/introduction_to_statistical_learning.qmd
+++ b/introduction_to_statistical_learning.qmd
@@ -105,3 +105,31 @@ Let me now bring together these various dimensions by summarizing how different 
 **K-nearest neighbors** is a simple non-parametric method that makes predictions by averaging the outcomes of similar observations in the training data. It is highly flexible and makes no assumptions about the form of f. However, it is not very interpretable because it does not produce coefficients or other summaries of how predictors relate to outcomes. Its predictive accuracy depends strongly on the choice of k and on having a sufficiently large and representative training sample.
 
 In summary, the landscape of statistical learning methods can be understood through several interconnected dimensions. The parametric versus non-parametric distinction concerns whether a method assumes a specific functional form for $f$ or lets the data determine the shape of the relationship. The interpretability versus flexibility trade-off reflects the tension between methods that produce easily understood results and methods that can capture complex patterns. The prediction versus inference distinction concerns whether our goal is to forecast future outcomes accurately or to understand the mechanisms connecting predictors to responses. These dimensions are interrelated: parametric methods tend to be more interpretable and better suited for inference, while non-parametric methods tend to be more flexible and better suited for prediction when interpretability is not required. The choice among methods depends on the specific goals of an analysis, the nature of the data, the sample size available, and the analyst's prior beliefs about the likely form of the relationship being studied.
+
+To complete our overview of the foundational concepts in statistical learning, we need to understand additional distinction between supervised and unsupervised learning that help us categorize different types of learning problems.
+
+**Supervised learning** refers to situations where for each observation in our dataset, we have both predictor measurements and a corresponding outcome measurement. The term "*supervised*" reflects the idea that the learning process is guided or supervised by the known outcomes. We observe what actually happened for each case in our training data, and we use this information to learn the relationship between predictors and outcomes. All the methods we have discussed so far, including linear regression, logistic regression, decision trees, random forests, and neural networks, fall into the supervised learning category when applied to problems where outcomes are observed. The fundamental goal of supervised learning is to build a model that can predict the outcome for new observations based on their predictor values, or to understand how the predictors relate to the outcome. In sociological research, most studies involve supervised learning because we typically have data on both the explanatory variables and the outcome of interest. For example, when we study the relationship between education and income, we observe both variables for the individuals in our sample, which allows us to estimate how education influences earnings.
+
+**Unsupervised learning** describes a fundamentally different situation where we observe predictor measurements for each observation but have no corresponding outcome variable. Without an outcome to predict or explain, we cannot fit a regression model or train a classifier. Instead, unsupervised learning seeks to discover patterns, structures, or groupings within the data itself. The most common unsupervised learning task is cluster analysis, which attempts to identify subgroups of observations that are similar to one another. For instance, a sociologist might have survey data containing many variables about people's attitudes, behaviors, and demographic characteristics, but no predefined categorization of people into types. Cluster analysis could reveal that the respondents naturally fall into distinct groups based on their patterns of responses, perhaps identifying clusters that correspond to different lifestyles, political orientations, or consumption patterns. The key feature of unsupervised learning is that there is no "correct answer" to supervise the learning process. We are not trying to predict a known outcome but rather to uncover hidden structure in the data. This makes unsupervised learning more exploratory and somewhat more subjective than supervised learning, since there is no objective criterion like prediction accuracy to evaluate whether we have found the right structure.
+
+| Method | Unsupervised / Supervised | Parametric / Non-parametric | Flexibility | Interpretability | Best Suited For | Regression / Classification | Sample Size Requirements |
+|--------|---------------------------|-------------|------------------|-----------------|---------------------------|-------------------------|
+| Linear Regression | Supervised | Parametric | Low | High | Inference | Regression | Moderate |
+| Ridge Regression | Supervised | Parametric | Low | High | Inference & Prediction | Regression | Moderate |
+| Lasso | Supervised | Parametric | Low | High | Inference & Prediction | Regression | Moderate |
+| Logistic Regression | Supervised | Parametric | Low | High | Inference | Classification | Moderate |
+| Generalized Additive Models (GAMs) | Supervised | Parametric (additive structure) | Medium | Medium-High | Inference & Prediction | Both | Moderate to Large |
+| Decision Trees | Supervised | Non-parametric | Medium | Medium | Inference & Prediction | Both | Moderate |
+| Bagging | Supervised | Non-parametric | High | Low | Prediction | Both | Large |
+| Random Forests | Supervised | Non-parametric | High | Low | Prediction | Both | Large |
+| Boosting | Supervised | Non-parametric | High | Low | Prediction | Both | Large |
+| Support Vector Machines (Linear Kernel) | Supervised | Parametric | Low-Medium | Medium | Prediction & Inference | Both | Moderate |
+| Support Vector Machines (Nonlinear Kernel) | Supervised | Non-parametric | High | Low | Prediction | Both | Large |
+| K-Nearest Neighbors | Supervised | Non-parametric | High | Low | Prediction | Both | Large |
+| Neural Networks / Deep Learning | Supervised | Non-parametric | Very High | Very Low | Prediction | Both | Very Large |
+| K-Means Clustering | Unsupervised | Non-parametric | Medium | Medium | Discovering groups in data | Moderate to Large |
+| Hierarchical Clustering | Unsupervised | Non-parametric | Medium | Medium-High | Discovering nested group structures | Moderate |
+| Principal Component Analysis (PCA) | Unsupervised | Parametric | Low | Medium-High | Dimensionality reduction | Moderate |
+| Factor Analysis | Unsupervised | Parametric | Low | High | Identifying latent constructs | Moderate |
+
+: **Table 1.1** Summary table of statistical learning methods
