--- a/introduction_to_statistical_learning.qmd
+++ b/introduction_to_statistical_learning.qmd
@@ -1,8 +1,14 @@
 ---
 title: "Introduction to statistical learning"
+description: ""
+number-sections: true
+title-block-banner: "#00868B"
+title-block-banner-color: "white"
 ---
 
 **Statistical learning** refers to a broad set of approaches and techniques for estimating the function that connects input variables to an output variable. At its core, statistical learning is concerned with understanding the relationship between variables and using that understanding either to make predictions about future observations or to gain insight into how different factors influence an outcome of interest.
+
+## Statistical learning formula
 
 The fundamental idea of statistical learning can be expressed through a simple formula:
 
@@ -38,15 +44,19 @@ $$
 Y\ =\ f(X_1,\ X_2,\ X_3,\ X_4,\ X_5,\ X_6,\ X_7)\ +\ ϵ
 $$
 
-$$
-adult\ income = f(educational\ credentials,\ occupation,\ geographic\ region,\ parents'\ socioeconomic\ status,\ race,\ gender,\ gender,\ years\ of\ work\ experience) + ϵ
-$$
+adult income = $f$(educational credentials, occupation, geographic region, parents' socioeconomic status, race, gender, gender, years of work experience) + $ϵ$
 
 In this formula, Y represents adult income measured in monetary units such as annual earnings in dollars or euros. This is the outcome we are trying to understand and potentially predict. The predictors are defined as follows. $X_1$ represents the person's educational credentials, which might be measured as years of schooling completed or as the highest degree obtained. $X_2$ represents occupation, which could be coded as occupational prestige scores or as categorical indicators for different types of jobs. $X_3$ represents the geographic region where the person lives and works, capturing spatial variation in labor markets and cost of living. $X_4$ represents parents' socioeconomic status, which might be measured through parental income, parental education, or a composite index combining multiple indicators of family background. $X_5$ represents race, coded as categorical indicators for different racial or ethnic groups. $X_6$ represents gender, typically coded as a binary or categorical variable. $X_7$ represents years of work experience, measuring how long the person has been participating in the labor force. The function $f$ captures the systematic relationship between all these predictors and adult income. This function describes how the labor market values different combinations of education, occupation, location, background, and demographic characteristics. The precise form of $f$ is unknown to us and must be estimated from data. It might be relatively simple, such as a linear combination of the predictors, or it might be quite complex, involving interactions between variables and nonlinear relationships. The error term $ϵ$ represents all the variation in adult income that cannot be explained by the seven predictors we have included. This encompasses unmeasured factors such as individual differences in productivity, motivation, and interpersonal skills, as well as random events like fortunate or unfortunate timing in job searches, health events that affect earning capacity, and idiosyncratic experiences of discrimination or favoritism in the workplace.
 
+## Relationship between independent and dependent variable
+
+### $f$ thing
+
 The function $f$ is the central object of interest in statistical learning. It represents the systematic relationship between the independent variable X and the dependent variable Y, capturing all the information that the independent variables provide about the dependent variable. When we say that $Y = f(X) + ϵ$, we are asserting that the outcome Y can be decomposed into two parts: a predictable component $f(X)$ that depends on the values of the predictors, and an unpredictable component $ϵ$ that represents random variation. The function $f$ is what connects the world of inputs to the world of predictors in a consistent, reproducible manner.
 
-Understanding the nature of $f$ is crucial because it embodies the underlying pattern that governs how changes in the independent variable translate into changes in the dependent variable. If we knew $f$ perfectly, we would understand exactly how each predictor influences the response, how predictors interact with one another, and what outcome to expect for any given combination of input values. However, in virtually all real-world applications, $f$ is unknown. We never observe $f$ directly; we only observe data points consisting of predictor values and corresponding outcomes. The entire purpose of statistical learning is to use these observed data points to construct an estimate of $f$, which we denote as $f̂$ (read as "f-hat"). This estimate allows us to either make predictions about future outcomes or draw inferences about the relationships between variables.
+Understanding the nature of $f$ is crucial because it embodies the underlying pattern that governs how changes in the independent variable translate into changes in the dependent variable. If we knew $f$ perfectly, we would understand exactly how each predictor influences the response, how predictors interact with one another, and what outcome to expect for any given combination of input values. However, in virtually all real-world applications, $f$ is unknown. We never observe $f$ directly; we only observe data points consisting of predictor values and corresponding outcomes. The entire purpose of statistical learning is to use these observed data points to construct an estimate of $f$, which we denote as $\hat{f}$. This estimate allows us to either make predictions about future outcomes or draw inferences about the relationships between variables.
+
+#### Prediction vs inference
 
 The reasons we might want to estimate $f$ fall into two broad categories: prediction and inference. These two goals are conceptually distinct, and they often lead us to prefer different types of statistical learning methods.
 
@@ -60,9 +70,11 @@ Returning to the income example, suppose a sociologist wants to understand the m
 
 In practice, many research projects involve elements of both prediction and inference. A sociologist studying income might want to understand the determinants of earnings while also developing a model that can predict incomes for new individuals. However, there is often tension between these goals because the methods that produce the most accurate predictions are not always the most interpretable, and the most interpretable methods do not always produce the best predictions.
 
+#### Parametric vs non-parametric methods
+
 Having established why we want to estimate $f$, let me now turn to the question of how we estimate $f$. Statistical learning methods for estimating $f$ can be broadly divided into two categories: parametric methods and non-parametric methods. These two approaches differ fundamentally in the assumptions they make about the form of $f$ and in the way they use data to construct an estimate.
 
-Parametric methods proceed in two steps. In the first step, we make an assumption about the functional form of $f$. That is, we specify in advance what kind of mathematical relationship we believe connects the predictors to the outcome. The most common assumption is that $f$ is linear, meaning that we assume the relationship can be written as $f(X) = \beta_0 + \beta_1X_1 + \beta_2X_2 + ... + \beta_pX_p$. This linear model asserts that the outcome is a weighted sum of the predictors, where the weights $\beta_1, \beta_2, ..., \beta_p$ are unknown coefficients that quantify the contribution of each predictor, and $\beta_0$ is an intercept term representing the expected outcome when all predictors equal zero. By assuming a linear form, we have dramatically simplified the problem. Instead of having to estimate an arbitrary, potentially very complex function $f$, we only need to estimate the intercept and the p coefficients. In the second step of the parametric approach, we use the observed data to fit or train the model. This means finding values of the parameters that make the model match the data as closely as possible. For the linear model, the most common fitting procedure is ordinary least squares, which chooses the parameter values that minimize the sum of squared differences between the observed outcomes and the outcomes predicted by the model. Once we have estimated the parameters, our estimate $f̂$ is fully specified, and we can use it for prediction or inference.
+**Parametric methods** proceed in two steps. In the first step, we make an assumption about the functional form of $f$. That is, we specify in advance what kind of mathematical relationship we believe connects the predictors to the outcome. The most common assumption is that $f$ is linear, meaning that we assume the relationship can be written as $f(X) = \beta_0 + \beta_1X_1 + \beta_2X_2 + ... + \beta_pX_p$. This linear model asserts that the outcome is a weighted sum of the predictors, where the weights $\beta_1, \beta_2, ..., \beta_p$ are unknown coefficients that quantify the contribution of each predictor, and $\beta_0$ is an intercept term representing the expected outcome when all predictors equal zero. By assuming a linear form, we have dramatically simplified the problem. Instead of having to estimate an arbitrary, potentially very complex function $f$, we only need to estimate the intercept and the p coefficients. In the second step of the parametric approach, we use the observed data to fit or train the model. This means finding values of the parameters that make the model match the data as closely as possible. For the linear model, the most common fitting procedure is ordinary least squares, which chooses the parameter values that minimize the sum of squared differences between the observed outcomes and the outcomes predicted by the model. Once we have estimated the parameters, our estimate $f̂$ is fully specified, and we can use it for prediction or inference.
 
 The parametric approach has several important advantages. Because we have reduced the problem to estimating a fixed number of parameters, parametric methods are computationally efficient and can work well even with relatively small samples. Furthermore, the resulting models are typically easy to interpret. In a linear model, each coefficient tells us how much the expected outcome changes when the corresponding predictor increases by one unit, holding all other predictors constant. This interpretability makes parametric models particularly valuable for inference. However, parametric methods also have a significant limitation. The assumption we make about the form of $f$ may be wrong. If the true relationship between the predictors and the outcome is nonlinear or involves complex interactions, a linear model will fail to capture these features and will provide a poor approximation to $f$. We can try to address this problem by using more flexible parametric models that include polynomial terms, interaction effects, or other elaborations of the basic linear form. But as we make our parametric model more flexible, we must estimate more parameters, which requires more data and increases the risk of a phenomenon called overfitting. Overfitting occurs when a model fits the training data very well but performs poorly on new data because it has captured random noise rather than genuine patterns. The model essentially memorizes the idiosyncrasies of the particular sample rather than learning the underlying relationship.
 
@@ -83,6 +95,8 @@ One might think that we should always prefer the most flexible method available,
 This phenomenon is especially important when sample sizes are limited. With a small sample, there is not enough information to reliably estimate a complex, flexible model, and the risk of overfitting is high. In such cases, imposing structure through a parametric model can actually improve predictive performance by preventing the model from chasing noise. As sample sizes grow larger, we can afford to use more flexible methods because there is enough information to distinguish genuine patterns from random variation.
 
 The choice of method therefore depends on our goals and our circumstances. If our primary goal is inference, we typically prefer more restrictive, interpretable methods like linear regression, even if they sacrifice some predictive accuracy. The interpretability allows us to draw substantive conclusions about how the world works. If our primary goal is prediction and we have ample data, we might prefer more flexible methods that can capture complex patterns, accepting that we will not be able to easily interpret the results. If we want prediction but have limited data, we might still prefer restrictive methods to avoid overfitting.
+
+##### Classification of statistical learning methods
 
 Let me now bring together these various dimensions by summarizing how different statistical learning methods can be characterized according to their suitability for prediction versus inference, their parametric versus non-parametric nature, and their position on the interpretability-flexibility spectrum.
 
@@ -105,6 +119,8 @@ Let me now bring together these various dimensions by summarizing how different 
 **K-nearest neighbors** is a simple non-parametric method that makes predictions by averaging the outcomes of similar observations in the training data. It is highly flexible and makes no assumptions about the form of f. However, it is not very interpretable because it does not produce coefficients or other summaries of how predictors relate to outcomes. Its predictive accuracy depends strongly on the choice of k and on having a sufficiently large and representative training sample.
 
 In summary, the landscape of statistical learning methods can be understood through several interconnected dimensions. The parametric versus non-parametric distinction concerns whether a method assumes a specific functional form for $f$ or lets the data determine the shape of the relationship. The interpretability versus flexibility trade-off reflects the tension between methods that produce easily understood results and methods that can capture complex patterns. The prediction versus inference distinction concerns whether our goal is to forecast future outcomes accurately or to understand the mechanisms connecting predictors to responses. These dimensions are interrelated: parametric methods tend to be more interpretable and better suited for inference, while non-parametric methods tend to be more flexible and better suited for prediction when interpretability is not required. The choice among methods depends on the specific goals of an analysis, the nature of the data, the sample size available, and the analyst's prior beliefs about the likely form of the relationship being studied.
+
+#### Supervised vs unsupervised learning
 
 To complete our overview of the foundational concepts in statistical learning, we need to understand additional distinction between supervised and unsupervised learning that help us categorize different types of learning problems.
 
